--- a/store.html
+++ b/store.html
@@ -8,7 +8,7 @@
     <title>Store Allskiin</title>
 
     <!----<link rel="shortcut icon" href="imagens/logo.png">---->
-    <link rel="stylesheet" type="text/css" href="store-styles.css">
+    <link rel="stylesheet" type="text/css" href="store-styles.css"/>
     <!--using fontAwesome--------------->
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />
