--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
         </div>
         <!--main-text------------>
         <div class="main-text">
-            <h1>Ve
-                <font>rão</font>
+            <h1>Nov
+                <font>idades</font>
             </h1>
-            <h2>Col
-                <font>eção</font>
+            <h2>20
+                <font>22</font>
             </h2>
             <!---btn----->
             <a href="#" class="main-btn">Detalhes</a>
