commit login html

--- a/login/login.html
+++ b/login/login.html
@@ -1,13 +1,32 @@
 
 <!DOCTYPE html>
+<!-- Created By Codecary -->
 <html lang="en">
 <head>
-  <title>Title of the document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>allskiin-login</title>
+    <link rel="stylesheet" href="login.css">
+
 </head>
 <body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+  <div class="container">
+    <h1>Login Form</h1>
+    <form>
+      <div class="form-control">
+        <input type="text" required>
+        <label>Email</label>
+      </div>
+      <div class="form-control">
+        <input type="password" required>
+        <label>Password</label>
+      </div>
+      <button class="btn">Login</button>
+      <p class="text">Don't have an account? <a href="#">Register</a></p>
+    </form>
+  </div>
 
+  <script src="login.js"></script>
 </body>
 </html>
