--- a/login/login-sign-in.html
+++ b/login/login-sign-in.html
@@ -5,14 +5,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>allskiin-login</title>
+    <title>allskiin-entrar</title>
     <link rel="stylesheet" href="login.css">
 
 </head>
 <body>
 
   <div class="container">
-    <h1>Login Form</h1>
+    <h1>Entrar</h1>
     <form>
       <div class="form-control">
         <input type="text" required>
@@ -20,10 +20,10 @@
       </div>
       <div class="form-control">
         <input type="password" required>
-        <label>Password</label>
+        <label>Senha</label>
       </div>
-      <button class="btn">Login</button>
-      <p class="text">Don't have an account? <a href="login-sign-up.html">Register</a></p>
+      <button class="btn">Entrar</button>
+      <p class="text">Não tem uma conta? <a href="login-sign-up.html">criar</a></p>
     </form>
   </div>
 
