--- a/login/login-sign-up.html
+++ b/login/login-sign-up.html
@@ -11,7 +11,7 @@
 <body>
 
   <div class="container">
-    <h1>Login Form</h1>
+    <h1>Cadastrar</h1>
     <form>
       <div class="form-control">
         <input type="text" required>
