--- a/login/login-sign-up.html
+++ b/login/login-sign-up.html
@@ -30,7 +30,7 @@
         <label>Confirmar Senha</label>
       </div>
       <button class="btn">Cadastrar</button>
-      <p class="text">já tem uma conta? <a href="login-sign-in.html">entrar</a></p>
+      <p class="text">já tem uma conta? <a href="index.html">entrar</a></p>
     </form>
   </div>
 
