--- a/login/login.html
+++ b/login/login.html
@@ -23,7 +23,7 @@
         <label>Senha</label>
       </div>
       <button class="btn">Entrar</button>
-      <p class="text">Não tem uma conta? <a href="sign-up.html">criar</a></p>
+      <p class="text">Não tem uma conta? <a href="/sign-up.html">criar</a></p>
     </form>
   </div>
 
