--- a/login/sing-up/sign-up.html
+++ b/login/sing-up/sign-up.html
@@ -30,7 +30,7 @@
         <label>Confirmar Senha</label>
       </div>
       <button class="btn">Cadastrar</button>
-      <p class="text">já tem uma conta? <a href="login.html">entrar</a></p>
+      <p class="text">já tem uma conta? <a href="/login.html">entrar</a></p>
     </form>
   </div>
 
