--- a/login/sing-up/sign-up.html
+++ b/login/sing-up/sign-up.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>allskiin-cadastrar</title>
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="sign-up.css">
 
 </head>
 <body>
