--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="navigation container">
                 <ul class="nav-list">
                     <li class="nav-item">
-                        <a href="login/login.html" class="nav-link icon"><i class="bx bx-user"></i></a>
+                        <a href="login2/index.html" class="nav-link icon"><i class="bx bx-user"></i></a>
                     </li>
                     <li class="nav-item">
                         <a href="Cart_HtmlPage.html" class="nav-link icon"><i class="bx bx-shopping-bag"></i></a>
