--- a/login2/index.html
+++ b/login2/index.html
@@ -34,7 +34,7 @@
 		<div class="wrap-login100 p-l-55 p-r-55 p-t-80 p-b-30">
 			<form class="login100-form validate-form">
 				<span class="login100-form-title p-b-37">
-					Sign In
+					Entrar
 				</span>
 
 				<div class="wrap-input100 validate-input m-b-20" data-validate="Enter username or email">
@@ -49,13 +49,13 @@
 
 				<div class="container-login100-form-btn">
 					<button class="login100-form-btn">
-						Sign In
+						Entrar
 					</button>
 				</div>
 
 				<div class="text-center p-t-57 p-b-20">
 					<span class="txt1">
-						Or login with
+						ou entrar com
 					</span>
 				</div>
 
@@ -70,8 +70,8 @@
 				</div>
 
 				<div class="text-center">
-					<a href="#" class="txt2 hov1">
-						Sign Up
+					<a href="sign-up/sign-up.html" class="txt2 hov1">
+						criar
 					</a>
 				</div>
 			</form>
