--- a/login2/sign-up/sign-up.html
+++ b/login2/sign-up/sign-up.html
@@ -49,13 +49,13 @@
 
 				<div class="container-login100-form-btn">
 					<button class="login100-form-btn">
-						Sign In
+						Criar
 					</button>
 				</div>
 
 				<div class="text-center p-t-57 p-b-20">
 					<span class="txt1">
-						Or login with
+						ou criar com
 					</span>
 				</div>
 
@@ -71,7 +71,7 @@
 
 				<div class="text-center">
 					<a href="#" class="txt2 hov1">
-						Sign Up
+						Entrar
 					</a>
 				</div>
 			</form>
