--- a/login2/index.html
+++ b/login2/index.html
@@ -37,13 +37,13 @@
 					Entrar
 				</span>
 
-				<div class="wrap-input100 validate-input m-b-20" data-validate="Enter username or email">
-					<input class="input100" type="text" name="username" placeholder="username or email">
+				<div class="wrap-input100 validate-input m-b-20" data-validate="nome ou email em falta">
+					<input class="input100" type="text" name="username" placeholder="nome ou email">
 					<span class="focus-input100"></span>
 				</div>
 
-				<div class="wrap-input100 validate-input m-b-25" data-validate = "Enter password">
-					<input class="input100" type="password" name="pass" placeholder="password">
+				<div class="wrap-input100 validate-input m-b-25" data-validate = "senha em falta">
+					<input class="input100" type="password" name="pass" placeholder="senha">
 					<span class="focus-input100"></span>
 				</div>
 
