--- a/login2/sign-up/sign-up.html
+++ b/login2/sign-up/sign-up.html
@@ -37,13 +37,18 @@
 					Sign In
 				</span>
 
-				<div class="wrap-input100 validate-input m-b-20" data-validate="Enter username or email">
-					<input class="input100" type="text" name="username" placeholder="username or email">
+				<div class="wrap-input100 validate-input m-b-20" data-validate="nome em falta">
+					<input class="input100" type="text" name="username" placeholder="nome">
+					<span class="focus-input100"></span>
+				</div>
+				
+				<div class="wrap-input100 validate-input m-b-20" data-validate="email em falta">
+					<input class="input100" type="text" name="username" placeholder="email">
 					<span class="focus-input100"></span>
 				</div>
 
-				<div class="wrap-input100 validate-input m-b-25" data-validate = "Enter password">
-					<input class="input100" type="password" name="pass" placeholder="password">
+				<div class="wrap-input100 validate-input m-b-25" data-validate = "senha em falta">
+					<input class="input100" type="password" name="pass" placeholder="senha">
 					<span class="focus-input100"></span>
 				</div>
 
@@ -70,7 +75,7 @@
 				</div>
 
 				<div class="text-center">
-					<a href="#" class="txt2 hov1">
+					<a href="https://allskiin.github.io/allskiin/login2/index.html" class="txt2 hov1">
 						Entrar
 					</a>
 				</div>
