--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>allskiin</title>
+    <title>allskiin • story</title>
 
     <!----<link rel="shortcut icon" href="imagens/logo.png">---->
     <link rel="stylesheet" type="text/css" href="store-styles.css"/>
