--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!---logo--------------------------->
         <div class="logo">
             <a href="#">
-                <font>all</font>skiin</a>
+                <font>all</font><h1>skiin</h1></a>
         </div>
         <nav class="nav">
             <div class="navigation container">
