--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="main" id="top">
         <!---logo--------------------------->
         <div class="logo">
-            <a href="#">
+            <a href="https://allskiin.github.io/allskiin">
                 <font>all</font><h1>skiin</h1></a>
         </div>
         <nav class="nav">
