--- a/index.html
+++ b/index.html
@@ -17,7 +17,28 @@
 
 <body>
 
-    <div class="loader"></div>
+    <div class="grid">
+      <div class="loader1">
+        <div id="ld2">
+          <div>
+          </div>
+          <div>
+          </div>
+          <div>
+          </div>
+          <div>
+          </div>
+          <div>
+          </div>
+          <div>
+          </div>
+          <div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    
     <div class='ripple-background'>
         <div class='circle xxlarge shade1'></div>
         <div class='circle xlarge shade2'></div>
