--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
     </script>
 
     <script>
-        var loader = document.querySelector(".loader")
+        var loader = document.querySelector(".loader1")
 
         window.addEventListener("load", vanish);
 
