--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>allskiin • story</title>
 
     <!----<link rel="shortcut icon" href="imagens/logo.png">---->
-    <link rel="stylesheet" type="text/css" href="store-styles.css"/>
+    <link rel="stylesheet" type="text/css" href="store-styles.css" />
     <!--using fontAwesome--------------->
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />
@@ -18,27 +18,27 @@
 <body>
 
     <div class="grid">
-      <div class="loader1">
-        <div id="ld2">
-          <div>
-          </div>
-          <div>
-          </div>
-          <div>
-          </div>
-          <div>
-          </div>
-          <div>
-          </div>
-          <div>
-          </div>
-          <div>
-          </div>
+        <div class="loader1">
+            <div id="ld2">
+                <div>
+                </div>
+                <div>
+                </div>
+                <div>
+                </div>
+                <div>
+                </div>
+                <div>
+                </div>
+                <div>
+                </div>
+                <div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-    
-    
+
+
     <div class='ripple-background'>
         <div class='circle xxlarge shade1'></div>
         <div class='circle xlarge shade2'></div>
@@ -51,7 +51,9 @@
         <!---logo--------------------------->
         <div class="logo">
             <a href="https://allskiin.github.io/allskiin">
-                <font>all</font><h1>skiin</h1></a>
+                <font>all</font>
+                <h1>skiin</h1>
+            </a>
         </div>
         <nav class="nav">
             <div class="navigation container">
@@ -62,23 +64,42 @@
                     <li class="nav-item">
                         <a href="Cart_HtmlPage.html" class="nav-link icon"><i class="bx bx-shopping-bag"></i></a>
                     </li>
-                    <li class="nav-item">
-                        <a href="sobre-mim/home.html" class="nav-link icon"><i class="bx bx-home"></i></a>
-                    </li>
                 </ul>
             </div>
             </div>
         </nav>
-        <!----search-------------->
+        <!----search--------------
         <div class="search">
             <div class="icone"></div>
-            <!----input-------------->
             <div class="input">
-                <!------- <input type="text" placeholder="Search"> --->
                 <input type="text" placeholder="Search" id="mysearch">
             </div>
             <span class="clear" onclick="document.getElementById('mysearch').value = ''"></span>
         </div>
+
+        ----search-------------->
+
+        <!----search em analise-------------->
+
+
+        <div class="search-box">
+            <input type="text" placeholder="Pesquisar na allskiin">
+            <div class="search-icon">
+                <i class="fas fa-search"></i>
+            </div>
+            <div class="cancel-icon">
+                <i class="fas fa-times"></i>
+            </div>
+            <div class="search-data">
+            </div>
+        </div>
+
+
+
+
+
+        <!----search fim-------------->
+
         <!--main-img------------>
         <div class="main-img">
             <img src="imagens/img-main.png" alt="" />
@@ -262,8 +283,8 @@
         <!----text------>
         <div class="brand-text">
             <h3>Nossa Marca</h3>
-            <h4>Sapatos pequenos 2021 recém-chegados sapatos mini
-                <font> Mensageiro Clássicos</font>
+            <h4>Melhor design 2022 recém-chegados T-shets
+                <font> allskiin </font>
             </h4>
             <p>Para escrever a descrição</p>
         </div>
@@ -275,344 +296,12 @@
 
     <!---watches----->
 
-    <!--product------------>
-
-    <section class="product">
-
-        <!--heading------------>
-        <div class="p-heading">
-            <h3>Nike
-                <font> Sho</font>es</h3>
-        </div>
-
-        <!--product-box-container------------>
-        <div class="product-container">
-            <div class="p-box">
-                <!--img--------->
-                <img src="tenis-Nike-img/tenis1.png" alt="">
-
-                <ul class="icons">
-                    <a><i class="far fa-heart fa-xs"></i></a>
-                    <a href="#"><i class="fas fa-shopping-bag fa-xs"></i></a>
-                    <a href="search-info/nike-shoes/search-nike-s.html"><i class="fas fa-search fa-xs"></i></a>
-                </ul>
-                <div class="ratting">
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star-half"></i>
-                </div>
-
-                <!---details------>
-                <p>Nike Air Force 1</p>
-                <!--price----->
-                <a href="#" class="price">41.499,00 AOA</a>
-                <!--buy-btn------>
-                <a href="#" class="buy-btn"><i class="fas fa-shopping-cart"></i></a>
-            </div>
-
-            <div class="p-box">
-
-                <!--img--------->
-
-                <img src="tenis-Nike-img/tenis2.png" alt="">
-                <ul class="icons">
-
-                    <a><i class="far fa-heart fa-xs"></i></a>
-                    <a href="#"><i class="fas fa-shopping-bag fa-xs"></i></a>
-                    <a href="search-info/nike-shoes/search-nike-s.html"><i class="fas fa-search fa-xs"></i></a>
-                </ul>
-                <div class="ratting">
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star-half"></i>
-                </div>
-                <!---details------>
-                <p>...</p>
-                <!--price----->
-                <a href="#" class="price">48.000,00 AOA</a>
-                <!--buy-btn------>
-                <a href="#" class="buy-btn"><i class="fas fa-shopping-cart"></i></a>
-            </div>
-
-            <div class="p-box">
-                <!--img--------->
-                <img src="tenis-Nike-img/tenis3.png" alt="">
-                <ul class="icons">
-                    <a><i class="far fa-heart fa-xs"></i></a>
-                    <a href="#"><i class="fas fa-shopping-bag fa-xs"></i></a>
-                    <a href="search-info/nike-shoes/search-nike-s.html"><i class="fas fa-search fa-xs"></i></a>
-                </ul>
-                <div class="ratting">
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star-half"></i>
-                </div>
-                <!---details------>
-                <p>...</p>
-                <!--price----->
-                <a href="#" class="price">60.000,00 AOA</a>
-                <!--buy-btn------>
-                <a href="#" class="buy-btn"><i class="fas fa-shopping-cart"></i></a>
-            </div>
-
-            <div class="p-box">
-                <!--img--------->
-                <img src="tenis-Nike-img/tenis4.png" alt="">
-                <ul class="icons">
-                    <a><i class="far fa-heart fa-xs"></i></a>
-                    <a href="#"><i class="fas fa-shopping-bag fa-xs"></i></a>
-                    <a href="search-info/nike-shoes/search-nike-s.html"><i class="fas fa-search fa-xs"></i></a>
-                </ul>
-                <div class="ratting">
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star-half"></i>
-                </div>
-                <!---details------>
-                <p>...</p>
-                <!--price----->
-                <a href="#" class="price">43.999,00 AOA</a>
-                <!--buy-btn------>
-                <a href="#" class="buy-btn"><i class="fas fa-shopping-cart"></i></a>
-            </div>
-
-            <div class="p-box">
-                <!--img--------->
-                <img src="tenis-Nike-img/tenis5.png" alt="">
-                <ul class="icons">
-                    <a><i class="far fa-heart fa-xs"></i></a>
-                    <a href="#"><i class="fas fa-shopping-bag fa-xs"></i></a>
-                    <a href="search-info/nike-shoes/search-nike-s.html"><i class="fas fa-search fa-xs"></i></a>
-                </ul>
-                <div class="ratting">
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star-half"></i>
-                </div>
-                <!---details------>
-                <p>...</p>
-                <!--price----->
-                <a href="#" class="price">52.125,00 AOA</a>
-                <!--buy-btn------>
-                <a href="#" class="buy-btn"><i class="fas fa-shopping-cart"></i></a>
-            </div>
-
-            <div class="p-box">
-                <!--img--------->
-                <img src="tenis-Nike-img/tenis6.png" alt="">
-                <ul class="icons">
-                    <a><i class="far fa-heart fa-xs"></i></a>
-                    <a href="#"><i class="fas fa-shopping-bag fa-xs"></i></a>
-                    <a href="search-info/nike-shoes/search-nike-s.html"><i class="fas fa-search fa-xs"></i></a>
-                </ul>
-                <div class="ratting">
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star-half"></i>
-                </div>
-                <!---details------>
-                <p>...</p>
-                <!--price----->
-                <a href="#" class="price">67.990,00 AOA</a>
-                <!--buy-btn------>
-                <a href="#" class="buy-btn"><i class="fas fa-shopping-cart"></i></a>
-            </div>
-
-
-        </div>
-    </section>
-
-
-    <!---our-brand------>
-    <search class="our-brand">
-        <!----text------>
-        <div class="brand-text">
-            <h3>Nossa Marca</h3>
-            <h4>Sapatos pequenos 2021 recém-chegados sapatos mini
-                <font> Mensageiro Clássicos</font>
-            </h4>
-            <p>Para escrever a descrição</p>
-        </div>
-        <!---img----->
-        <div class="brand-img">
-            <img class="" src="" alt="" />
-        </div>
-    </search>
-
-
-    <section class="product">
-        <!--heading------------>
-        <div class="p-heading">
-            <h3>ADIDAS
-                <font> Sho</font>es</h3>
-        </div>
-
-        <!--product-box-container------------>
-        <div class="product-container">
-            <div class="p-box">
-                <!--img--------->
-                <img src="tenis-adidas-img/adidas-shoes1.png" width="220px" alt="">
-
-                <ul class="icons">
-                    <a><i class="far fa-heart fa-xs"></i></a>
-                    <a href="#"><i class="fas fa-shopping-bag fa-xs"></i></a>
-                    <a href="#"><i class="fas fa-search fa-xs"></i></a>
-                </ul>
-                <div class="ratting">
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star-half"></i>
-                </div>
-
-                <!---details------>
-                <p>Nike Air Force 1</p>
-                <!--price----->
-                <a href="#" class="price">41.499,00 AOA</a>
-                <!--buy-btn------>
-                <a href="#" class="buy-btn"><i class="fas fa-shopping-cart"></i></a>
-            </div>
-
-            <div class="p-box">
-
-                <!--img--------->
-
-                <img src="tenis-adidas-img/adidas-shoes2.jpg" alt="">
-                <ul class="icons">
-
-                    <a><i class="far fa-heart fa-xs"></i></a>
-                    <a href="#"><i class="fas fa-shopping-bag fa-xs"></i></a>
-                    <a href="#"><i class="fas fa-search fa-xs"></i></a>
-                </ul>
-                <div class="ratting">
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star-half"></i>
-                </div>
-                <!---details------>
-                <p></p>
-                <!--price----->
-                <a href="#" class="price">48.000,00 AOA</a>
-                <!--buy-btn------>
-                <a href="#" class="buy-btn"><i class="fas fa-shopping-cart"></i></a>
-            </div>
-
-            <div class="p-box">
-                <!--img--------->
-                <img src="" alt="">
-                <ul class="icons">
-                    <a><i class="far fa-heart fa-xs"></i></a>
-                    <a href="#"><i class="fas fa-shopping-bag fa-xs"></i></a>
-                    <a href="#"><i class="fas fa-search fa-xs"></i></a>
-                </ul>
-                <div class="ratting">
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star-half"></i>
-                </div>
-                <!---details------>
-                <p>B</p>
-                <!--price----->
-                <a href="#" class="price">60.000,00 AOA</a>
-                <!--buy-btn------>
-                <a href="#" class="buy-btn"><i class="fas fa-shopping-cart"></i></a>
-            </div>
-
-            <div class="p-box">
-                <!--img--------->
-                <img src="" alt="">
-                <ul class="icons">
-                    <a><i class="far fa-heart fa-xs"></i></a>
-                    <a href="#"><i class="fas fa-shopping-bag fa-xs"></i></a>
-                    <a href="#"><i class="fas fa-search fa-xs"></i></a>
-                </ul>
-                <div class="ratting">
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star-half"></i>
-                </div>
-                <!---details------>
-                <p>...</p>
-                <!--price----->
-                <a href="#" class="price">43.999,00 AOA</a>
-                <!--buy-btn------>
-                <a href="#" class="buy-btn"><i class="fas fa-shopping-cart"></i></a>
-            </div>
-
-            <div class="p-box">
-                <!--img--------->
-                <img src="" alt="">
-                <ul class="icons">
-                    <a><i class="far fa-heart fa-xs"></i></a>
-                    <a href="#"><i class="fas fa-shopping-bag fa-xs"></i></a>
-                    <a href="#"><i class="fas fa-search fa-xs"></i></a>
-                </ul>
-                <div class="ratting">
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star-half"></i>
-                </div>
-                <!---details------>
-                <p>...</p>
-                <!--price----->
-                <a href="#" class="price">52.125,00 AOA</a>
-                <!--buy-btn------>
-                <a href="#" class="buy-btn"><i class="fas fa-shopping-cart"></i></a>
-            </div>
-
-            <div class="p-box">
-                <!--img--------->
-                <img src="" alt="">
-                <ul class="icons">
-                    <a><i class="far fa-heart fa-xs"></i></a>
-                    <a href="#"><i class="fas fa-shopping-bag fa-xs"></i></a>
-                    <a href="#"><i class="fas fa-search fa-xs"></i></a>
-                </ul>
-                <div class="ratting">
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star-half"></i>
-                </div>
-                <!---details------>
-                <p>...</p>
-                <!--price----->
-                <a href="#" class="price">67.990,00 AOA</a>
-                <!--buy-btn------>
-                <a href="#" class="buy-btn"><i class="fas fa-shopping-cart"></i></a>
-            </div>
-
-
-        </div>
-    </section>
 
 
     <!----Subcribe---->
     <section class="subcribe-container">
         <!--heading---->
-        <h3>Inscreva-se Para Receber <br>Notificacoes De Novos Produtos</h3>
+        <h3>Inscreva-se Para Receber<br>Notificacoes De Novos Produtos</h3>
         <!---input---->
         <div class="subcribe-input">
             <input type="email" placeholder="exemplo@gmail.com" />
@@ -646,11 +335,32 @@
     <a href="#" class="copyright">allskiin</a>
 
     <script>
-        const icone = document.querySelector('.icone');
-        const search = document.querySelector('.search');
-
-        icone.onclick = function() {
-            search.classList.toggle('active');
+        const searchBox = document.querySelector(".search-box");
+        const searchBtn = document.querySelector(".search-icon");
+        const cancelBtn = document.querySelector(".cancel-icon");
+        const searchInput = document.querySelector("input");
+        const searchData = document.querySelector(".search-data");
+        searchBtn.onclick = () => {
+            searchBox.classList.add("active");
+            searchBtn.classList.add("active");
+            searchInput.classList.add("active");
+            cancelBtn.classList.add("active");
+            searchInput.focus();
+            if (searchInput.value != "") {
+                var values = searchInput.value;
+                searchData.classList.remove("active");
+                searchData.innerHTML = "Pesquisou por " + "<span style='font-weight: 500;'>" + values + "</span>";
+            } else {
+                searchData.textContent = "";
+            }
+        }
+        cancelBtn.onclick = () => {
+            searchBox.classList.remove("active");
+            searchBtn.classList.remove("active");
+            searchInput.classList.remove("active");
+            cancelBtn.classList.remove("active");
+            searchData.classList.toggle("active");
+            searchInput.value = "";
         }
 
         var mode = document.getElementById("mode");
