commit links das redes sociais

--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
         </div>
         <!--Social------------>
         <div class="social">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="facebook.com/allskiin.angola"><i class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="instagram.com/allskiin_angola"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.youtube.com/channel/UCa0HVyvzwLcoWq4PdfH3vbA/"><i class="fab fa-youtube"></i></a>
         </div>
     </section>
 
