--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
     </footer>
 
     <!---copyright-------->
-    <a href="#" class="copyright">allskiin</a>
+    <a href="#" class="copyright">© 2022 Allskiin, Inc.</a>
 
     <script>
         const searchBox = document.querySelector(".search-box");
