--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </section>
 
 
-    <!--product------------>
+    <!--produtos------------>
     <section class="product">
         <!--heading------------>
         <div class="p-heading">
@@ -186,9 +186,9 @@
                 <!--img--------->
                 <img src="tsherts-img/tshert3.png" alt="">
                 <ul class="icons">
-                    <span><a><i class="far fa-heart fa-xs"></i></a></span>
-                    <span><a href="#"><i class="fas fa-shopping-bag fa-xs"></i></a></span>
-                    <span><a href="#"><i class="fas fa-search fa-xs"></i></a></span>
+                    <a><i class="far fa-heart fa-xs"></i></a></span>
+                    <a href="#"><i class="fas fa-shopping-bag fa-xs"></i></a>
+                    <a href="#"><i class="fas fa-search fa-xs"></i></a>
                 </ul>
                 <div class="ratting">
                     <i class="bx bxs-star"></i>
