--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="product-container">
             <div class="p-box">
                 <!--img--------->
-                <img src="tsherts-img/tshert1.png" alt="">
+                <img src="Tsherts-allskiin-2022/t-shert1.png" alt="">
                 <ul class="icons">
                     <a><i class="far fa-heart fa-xs"></i></a>
                     <a href=""><i class="fas fa-shopping-bag fa-xs"></i></a>
@@ -161,7 +161,7 @@
 
                 <!--img--------->
 
-                <img src="tsherts-img/tshert2.png" alt="">
+                <img src="Tsherts-allskiin-2022/t-shert2.png" alt="">
                 <ul class="icons">
                     <a><i class="far fa-heart fa-xs"></i></a>
                     <a href=""><i class="fas fa-shopping-bag fa-xs"></i></a>
@@ -184,7 +184,7 @@
 
             <div class="p-box">
                 <!--img--------->
-                <img src="tsherts-img/tshert3.png" alt="">
+                <img src="Tsherts-allskiin-2022/t-shert3.jpg" alt="">
                 <ul class="icons">
                     <a><i class="far fa-heart fa-xs"></i></a></span>
                     <a href="#"><i class="fas fa-shopping-bag fa-xs"></i></a>
@@ -201,75 +201,6 @@
                 <p>...</p>
                 <!--price----->
                 <a href="#" class="price">6.599,00 AOA</a>
-                <!--buy-btn------>
-                <a href="#" class="buy-btn"><i class="fas fa-shopping-cart"></i></a>
-            </div>
-
-            <div class="p-box">
-                <!--img--------->
-                <img src="tsherts-img/tshert4.png" alt="">
-                <ul class="icons">
-                    <a><i class="far fa-heart fa-xs"></i></a>
-                    <a href=""><i class="fas fa-shopping-bag fa-xs"></i></a>
-                    <a href=""><i class="fas fa-search fa-xs"></i></a>
-                </ul>
-                <div class="ratting">
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star-half"></i>
-                </div>
-                <!---details------>
-                <p>...</p>
-                <!--price----->
-                <a href="#" class="price">4.899,00 AOA</a>
-                <!--buy-btn------>
-                <a href="#" class="buy-btn"><i class="fas fa-shopping-cart"></i></a>
-            </div>
-
-            <div class="p-box">
-                <!--img--------->
-                <img src="tsherts-img/" alt="">
-                <ul class="icons">
-                    <a><i class="far fa-heart fa-xs"></i></a>
-                    <a href=""><i class="fas fa-shopping-bag fa-xs"></i></a>
-                    <a href=""><i class="fas fa-search fa-xs"></i></a>
-                </ul>
-                <div class="ratting">
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star-half"></i>
-                </div>
-                <!---details------>
-                <p>...</p>
-                <!--price----->
-                <a href="#" class="price">5.000,00 AOA</a>
-                <!--buy-btn------>
-                <a href="#" class="buy-btn"><i class="fas fa-shopping-cart"></i></a>
-            </div>
-
-            <div class="p-box">
-                <!--img--------->
-                <img src="imagens/" alt="">
-                <ul class="icons">
-                    <a><i class="far fa-heart fa-xs"></i></a>
-                    <a href=""><i class="fas fa-shopping-bag fa-xs"></i></a>
-                    <a href=""><i class="fas fa-search fa-xs"></i></a>
-                </ul>
-                <div class="ratting">
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star"></i>
-                    <i class="bx bxs-star-half"></i>
-                </div>
-                <!---details------>
-                <p>...</p>
-                <!--price----->
-                <a href="#" class="price">4.999,00 AOA</a>
                 <!--buy-btn------>
                 <a href="#" class="buy-btn"><i class="fas fa-shopping-cart"></i></a>
             </div>
