--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
             <div class="p-box">
                 <!--img--------->
-                <img src="Tsherts-allskiin-2022/t-shert3.jpg" alt="">
+                <img src="Tsherts-allskiin-2022/t-shert3.png" alt="">
                 <ul class="icons">
                     <a><i class="far fa-heart fa-xs"></i></a></span>
                     <a href="#"><i class="fas fa-shopping-bag fa-xs"></i></a>
