--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <a href="login2/index.html" class="nav-link icon"><i class="bx bx-user"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a href="Cart_HtmlPage.html" class="nav-link icon"><i class="bx bx-shopping-bag"></i></a>
+                        <a href="pay/pay.html" class="nav-link icon"><i class="bx bx-shopping-bag"></i></a>
                     </li>
                 </ul>
             </div>
