--- a/pay/pay.html
+++ b/pay/pay.html
@@ -8,7 +8,7 @@
     <title>allskiin • pagamento</title>
 
     <!----<link rel="shortcut icon" href="imagens/logo.png">---->
-    <link rel="stylesheet" type="text/css" href="pay/pay.css" />
+    <link rel="stylesheet" type="text/css" href="pay.css" />
     <!--using fontAwesome--------------->
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />
@@ -84,5 +84,5 @@
 </div>
 
   </body>
-  <script src="pay/pay.js"></script>
+  <script src="pay.js"></script>
 </html>  
