--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="navigation container">
                 <ul class="nav-list">
                     <li class="nav-item">
-                        <a href="login2/index.html" class="nav-link icon"><i class="bx bx-user"></i></a>
+                        <a href="#" class="nav-link icon"><i class="bx bx-user"></i></a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link icon"><i class="bx bx-shopping-bag"></i></a>
