--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <a href="#" class="nav-link icon"><i class="bx bx-user"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link icon"><i class="bx bx-shopping-bag"></i></a>
+                        <a href="https://wa.me/message/BOZGIRQ5M4DYB1" class="nav-link icon"><i class="bx bx-shopping-bag"></i></a>
                     </li>
                 </ul>
             </div>
